--- a/src/main/resources/dbLogger.properties
+++ b/src/main/resources/dbLogger.properties
@@ -2,7 +2,7 @@ sqlDriverClass=org.postgresql.Driver
 jdbcUrl=jdbc:postgresql://172.28.128.3:5432/db
 dbUser=user
 dbPassword=password
-MinPoolSize=10
-MaxPoolSize=300
-AcquireIncrement=5
-MaxStatements=300
+minPoolSize=10
+maxPoolSize=300
+acquireIncrement=5
+maxStatements=300
